--- a/src/app/modules/professional-level/pages/professional-level/professional-level.page.scss
+++ b/src/app/modules/professional-level/pages/professional-level/professional-level.page.scss
@@ -38,7 +38,7 @@ page-professional-level {
     }
 
     .resultTitle{
-        
+        vertical-align: -webkit-baseline-middle;
     }
 
 }
